# proc-macro2

./: .travis.yml  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
benches/bench-libproc-macro/: Cargo.toml  README.md  lib.rs  main.rs
fallback/: Cargo.toml
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: parse_token_stream.rs
proc-macro2-test/: Cargo.toml
proc-macro2-test/src/: lib.rs
src/: convert.rs  detection.rs  extra.rs  fallback.rs  lib.rs  location.rs  marker.rs  num.rs  parse.rs  probe.rs  rcvec.rs  rustc_literal_escaper.rs  stable.rs  strnom.rs  unstable.rs  wrapper.rs
src/probe/: proc_macro_span.rs  proc_macro_span_file.rs  proc_macro_span_location.rs
testcrate/: Cargo.toml
testcrate/tests/compile-fail/: symbol_sync.rs
tests/: comments.rs  compiletest.rs  features.rs  marker.rs  test.rs  test_fmt.rs  test_size.rs
tests/compile-fail/: symbol_send.rs  symbol_sync.rs
tests/span/: Cargo.toml  span.rs
tests/ui/: Cargo.toml  compiletest.rs  not-send.rs  not-send.stderr  test-not-send.stderr
