[package]
name = "proc-macro2"
version = "0.4.14" # remember to update html_root_url
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["macros"]
repository = "https://github.com/alexcrichton/proc-macro2"
homepage = "https://github.com/alexcrichton/proc-macro2"
documentation = "https://docs.rs/proc-macro2"
build = "build.rs"
description = """
A stable implementation of the upcoming new `proc_macro` API. Comes with an
option, off by default, to also reimplement itself in terms of the upstream
unstable API.
"""

[lib]
doctest = false

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "procmacro2_semver_exempt"]

[dependencies]
unicode-xid = "0.1"

[features]
# When enabled: act as a shim around the nightly compiler's proc_macro crate.
# This requires a nightly compiler.
#
# When disabled: emulate the same API as the nightly compiler's proc_macro crate
# but in a way that works on all stable compilers 1.15+.
nightly = ["proc-macro"]

proc-macro = []
default = ["proc-macro"]

[badges]
travis-ci = { repository = "alexcrichton/proc-macro2" }
