[package]
name = "proc-macro2-fallback"
version = "1.0.66"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/proc-macro2"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "doc_cfg", "--generate-link-to-definition"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
unicode-ident = "1"

[dev-dependencies]
proc-macro2 = { version = "1", path = "..", default_features = false }
quote = { version = "1", default_features = false }

[lib]
doc-scrape-examples = false
